--- a/devcooch/Cargo.toml
+++ b/devcooch/Cargo.toml
@@ -3,3 +3,6 @@ name = "dima-advent-of-code-2019"
 version = "1.0.0"
 authors = ["Dmitry Kochkin <cooch@mail.ru>"]
 edition = "2018"
+
+[dependencies]
+permutohedron = "*"
